<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GhostStories</string>
    <string name="left_space">Left Space</string>
    <string name="middle_space">Middle Space</string>
    <string name="right_space">Right Space</string>
    <string name="haunter">Haunter</string>   
    <string name="highlight">Highlight</string> 
    <string name="village_tile">Village Tile</string>
    <string name="monk">Monk</string>
    <string name="player_ability">Player Ability</string>
    <string name="combat_health">Ghost Health</string> 
    <string name="combat_ghost">Ghost</string>
    <string name="background">Background</string>
    <string name="dice">Dice</string>
    <string name="attack">Attack</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="info">Info</string>
    <string name="combat_attack">Roll Dice To Attack</string>
    <string name="combat_attack_2">God\'s Favorite: Tap Dice To Keep and Roll Again</string>
    <string name="combat_resolution">Drag Dice and Tao Tokens Onto Ghosts To Attack</string>
    <string name="graveyard">Graveyard</string>
    <string name="smoke">Smoke</string>    
    <string name="circle_of_prayer">Circle Of Prayer</string>
    <string name="selected_token">Selected Token</string>
    <string name="token">Token</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
</resources>