<games.ghoststories.views.gameboard.PlayerBoardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gs="http://schemas.android.com/apk/res/games.ghoststories"
    android:id="@+id/left_board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clipChildren="false"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:clipChildren="false"
        android:orientation="vertical" >

        <games.ghoststories.views.gameboard.PlayerBoardCardView
            android:id="@+id/left_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            gs:card_location="left" >

            <ImageView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/left_space"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/green_left" />

            <include layout="@layout/card_extras" />
        </games.ghoststories.views.gameboard.PlayerBoardCardView>

        <games.ghoststories.views.gameboard.PlayerBoardCardView
            android:id="@+id/middle_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            gs:card_location="middle" >

            <ImageView
                android:id="@id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/middle_space"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/green_middle" />

            <include layout="@layout/card_extras" />
        </games.ghoststories.views.gameboard.PlayerBoardCardView>

        <games.ghoststories.views.gameboard.PlayerBoardCardView
            android:id="@+id/right_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            gs:card_location="right" >

            <ImageView
                android:id="@id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/right_space"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/green_right" />

            <include layout="@layout/card_extras" />
        </games.ghoststories.views.gameboard.PlayerBoardCardView>
    </LinearLayout>

</games.ghoststories.views.gameboard.PlayerBoardView>